--- a/src/app/pages/forgetpassword/forgetpassword.component.html
+++ b/src/app/pages/forgetpassword/forgetpassword.component.html
@@ -42,7 +42,7 @@
       <input
         formControlName="resetCode"
         id="resetCode"
-        type="number"
+        type="text"
         class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:border-gray-500 block w-full p-2.5"
       />
     </div>
@@ -63,6 +63,16 @@
     class="border rounded shadow p-3"
     [formGroup]="resetPassword"
   >
+  <div>
+      <label for="email"> email </label>
+      <input
+        formControlName="email"
+        id="email"
+        type="email"
+        class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+      />
+    </div>
+
     <div>
       <label for="newPassword"> newPassword </label>
       <input
