--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,6 +1,7 @@
-<div class="flex gap-12">
+<section class="p-5">
+  <div class="flex gap-12">
   <div class="w-1/4">
-    <img [src]="specificProduct().imageCover" [alt]="specificProduct().title" />
+    <img [src]="specificProduct().imageCover" [alt]="specificProduct().title" class="w-full" />
   </div>
   <div class="w-3/4 self-center">
     <h2 class="text-green-700 text-lg">{{ specificProduct().title }}</h2>
@@ -8,7 +9,7 @@
       {{ specificProduct().category.name }}
     </h4>
     <p>{{ specificProduct().description }}</p>
-    <div class="flex justify-evenly items-center">
+    <div class="flex justify-evenly items-center my-3">
       <span> {{ specificProduct().price | currency : "EGP" }} </span>
       <span> quantity : {{ specificProduct().quantity }} </span>
       <div class="flex items-center">
@@ -26,3 +27,5 @@
     </button>
   </div>
 </div>
+
+</section>
