--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,5 +1,5 @@
 <section>
-  <h2 class="text-4xl mt-4 pt-1">All Products</h2>
+  <h2 class="text-4xl mt-4 pt-1 my-3 text-green-500 text-center p-1 w-fit mx-auto">All Products</h2>
   <div
     class="grid sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-x-2 gap-y-4 p-5 mt-3"
   >
