--- a/src/app/pages/forgetpassword/forgetpassword.component.html
+++ b/src/app/pages/forgetpassword/forgetpassword.component.html
@@ -1,6 +1,6 @@
 <section>
   <h1
-    class="text-center text-2xl my-8 bg-green-600 text-white p-5 w-[250px] m-auto rounded"
+    class="text-center text-2xl my-8 text-green-500 p-5 m-auto rounded"
   >
     forgetPassword
   </h1>
@@ -8,16 +8,16 @@
   @if (step() === 1) {
   <form
     (ngSubmit)="verifyEmailSubmit()"
-    class="border rounded shadow p-3"
+    class="border rounded shadow p-3"
     [formGroup]="verifyEmail"
   >
     <div>
-      <label for="email"> email </label>
+      <label class="text-green-500 text-xl" for="email"> email </label>
       <input
         formControlName="email"
         id="email"
         type="email"
-        class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+        class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
       />
     </div>
 
@@ -34,16 +34,16 @@
   } @else if (step() === 2) {
   <form
     (ngSubmit)="verifyCodeSubmit()"
-    class="border rounded shadow p-3"
+    class="border rounded shadow p-3"
     [formGroup]="verifyCode"
   >
     <div>
-      <label for="resetCode"> resetCode </label>
+      <label class="text-green-500 text-xl" for="resetCode"> resetCode </label>
       <input
         formControlName="resetCode"
         id="resetCode"
         type="text"
-        class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:border-gray-500 block w-full p-2.5"
+        class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
       />
     </div>
 
@@ -60,26 +60,26 @@
 
   <form
     (ngSubmit)="resetPasswordSubmit()"
-    class="border rounded shadow p-3"
+    class="border rounded shadow p-3"
     [formGroup]="resetPassword"
   >
   <div>
-      <label for="email"> email </label>
+      <label class="text-green-500 text-xl" for="email"> email </label>
       <input
         formControlName="email"
         id="email"
         type="email"
-        class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+        class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
       />
     </div>
 
     <div>
-      <label for="newPassword"> newPassword </label>
+      <label class="text-green-500 text-xl" for="newPassword"> newPassword </label>
       <input
         formControlName="newPassword"
         id="newPassword"
         type="password"
-        class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+        class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
       />
     </div>
 
