--- a/src/app/pages/forgetpassword/forgetpassword.component.html
+++ b/src/app/pages/forgetpassword/forgetpassword.component.html
@@ -17,7 +17,7 @@
         formControlName="email"
         id="email"
         type="email"
-        class="form-control my-5 bg-white border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+        class="form-control my-5 bg-white border-1 border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
       />
     </div>
 
